fix tradefee layout shift

--- a/components/data/tradeFee/TradeFee.module.css
+++ b/components/data/tradeFee/TradeFee.module.css
@@ -88,7 +88,7 @@
 }
 
 .chartkey {
- width:fit-content;
+ width:25rem;
   
 }
 
